// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`node version in workflow does setup a custom version 1`] = `
{
  "env": {
    "CI": "true",
  },
  "outputs": {
    "self_mutation_happened": "\${{ steps.self_mutation.outputs.self_mutation_happened }}",
  },
  "permissions": {
    "contents": "write",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "name": "Checkout",
      "uses": "actions/checkout@v4",
      "with": {
        "ref": "\${{ github.event.pull_request.head.ref }}",
        "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
      },
    },
    {
      "name": "Setup Node.js",
      "uses": "actions/setup-node@v4",
      "with": {
        "node-version": "20.17.0",
      },
    },
    {
      "name": "Install dependencies",
      "run": "yarn install --check-files",
    },
    {
      "name": "build",
      "run": "npx projen build",
    },
    {
      "id": "self_mutation",
      "name": "Find mutations",
      "run": "git add .
git diff --staged --patch --exit-code > repo.patch || echo "self_mutation_happened=true" >> $GITHUB_OUTPUT",
      "shell": "bash",
      "working-directory": "./",
    },
    {
      "if": "steps.self_mutation.outputs.self_mutation_happened",
      "name": "Upload patch",
      "uses": "actions/upload-artifact@v4.4.0",
      "with": {
        "name": "repo.patch",
        "overwrite": true,
        "path": "repo.patch",
      },
    },
    {
      "if": "steps.self_mutation.outputs.self_mutation_happened",
      "name": "Fail build on mutation",
      "run": "echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
cat repo.patch
exit 1",
    },
    {
      "continue-on-error": true,
      "name": "Backup artifact permissions",
      "run": "cd dist && getfacl -R . > permissions-backup.acl",
    },
    {
      "name": "Upload artifact",
      "uses": "actions/upload-artifact@v4.4.0",
      "with": {
        "name": "build-artifact",
        "overwrite": true,
        "path": "dist",
      },
    },
  ],
}
`;

exports[`node version in workflow does setup default version 1`] = `
{
  "env": {
    "CI": "true",
  },
  "outputs": {
    "self_mutation_happened": "\${{ steps.self_mutation.outputs.self_mutation_happened }}",
  },
  "permissions": {
    "contents": "write",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "name": "Checkout",
      "uses": "actions/checkout@v4",
      "with": {
        "ref": "\${{ github.event.pull_request.head.ref }}",
        "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
      },
    },
    {
      "name": "Setup Node.js",
      "uses": "actions/setup-node@v4",
      "with": {
        "node-version": "lts/*",
      },
    },
    {
      "name": "Install dependencies",
      "run": "yarn install --check-files",
    },
    {
      "name": "build",
      "run": "npx projen build",
    },
    {
      "id": "self_mutation",
      "name": "Find mutations",
      "run": "git add .
git diff --staged --patch --exit-code > repo.patch || echo "self_mutation_happened=true" >> $GITHUB_OUTPUT",
      "shell": "bash",
      "working-directory": "./",
    },
    {
      "if": "steps.self_mutation.outputs.self_mutation_happened",
      "name": "Upload patch",
      "uses": "actions/upload-artifact@v4.4.0",
      "with": {
        "name": "repo.patch",
        "overwrite": true,
        "path": "repo.patch",
      },
    },
    {
      "if": "steps.self_mutation.outputs.self_mutation_happened",
      "name": "Fail build on mutation",
      "run": "echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
cat repo.patch
exit 1",
    },
    {
      "continue-on-error": true,
      "name": "Backup artifact permissions",
      "run": "cd dist && getfacl -R . > permissions-backup.acl",
    },
    {
      "name": "Upload artifact",
      "uses": "actions/upload-artifact@v4.4.0",
      "with": {
        "name": "build-artifact",
        "overwrite": true,
        "path": "dist",
      },
    },
  ],
}
`;

exports[`node version in workflow does use minNodeVersion 1`] = `
{
  "env": {
    "CI": "true",
  },
  "outputs": {
    "self_mutation_happened": "\${{ steps.self_mutation.outputs.self_mutation_happened }}",
  },
  "permissions": {
    "contents": "write",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "name": "Checkout",
      "uses": "actions/checkout@v4",
      "with": {
        "ref": "\${{ github.event.pull_request.head.ref }}",
        "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
      },
    },
    {
      "name": "Setup Node.js",
      "uses": "actions/setup-node@v4",
      "with": {
        "node-version": "18.0.0",
      },
    },
    {
      "name": "Install dependencies",
      "run": "yarn install --check-files",
    },
    {
      "name": "build",
      "run": "npx projen build",
    },
    {
      "id": "self_mutation",
      "name": "Find mutations",
      "run": "git add .
git diff --staged --patch --exit-code > repo.patch || echo "self_mutation_happened=true" >> $GITHUB_OUTPUT",
      "shell": "bash",
      "working-directory": "./",
    },
    {
      "if": "steps.self_mutation.outputs.self_mutation_happened",
      "name": "Upload patch",
      "uses": "actions/upload-artifact@v4.4.0",
      "with": {
        "name": "repo.patch",
        "overwrite": true,
        "path": "repo.patch",
      },
    },
    {
      "if": "steps.self_mutation.outputs.self_mutation_happened",
      "name": "Fail build on mutation",
      "run": "echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
cat repo.patch
exit 1",
    },
    {
      "continue-on-error": true,
      "name": "Backup artifact permissions",
      "run": "cd dist && getfacl -R . > permissions-backup.acl",
    },
    {
      "name": "Upload artifact",
      "uses": "actions/upload-artifact@v4.4.0",
      "with": {
        "name": "build-artifact",
        "overwrite": true,
        "path": "dist",
      },
    },
  ],
}
`;
